<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.RegistrationDetails"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/vehicleDetails"
    android:textSize="20sp"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:layout_margin="3dp"
    android:id="@+id/vehicleDetails"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/plateNumber"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/color"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vin"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/vin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tare_mass"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/tareMass"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gross_vehicle_mass"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/gvm"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>

        <View
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrationDetails"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_columnSpan="2"
            android:layout_margin="3dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expiry_date"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_to_expire"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/expiry"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_to_expire"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/numdays"
        android:layout_marginRight="10dp"
        android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate_number"
            android:textStyle="normal"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:id="@+id/regStatus"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"/>

        <View
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"
            android:background="@color/colorPrimary"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insuranceDetails"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_columnSpan="2"
            android:layout_margin="3dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insurer"
        android:textStyle="bold"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plate_number"
        android:textStyle="normal"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:id="@+id/insurer"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate_number"
            android:textStyle="normal"
            android:layout_margin="3dp"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:id="@+id/code"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"/>


    </GridLayout>
</LinearLayout>
</layout>